--- a/404.html
+++ b/404.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
 <head>
-  <meta http-equiv="refresh" content="0; URL=./index.html" />
+    <script>
+        // Preserve the path and redirect to index.html
+        window.location.replace(window.location.origin + import.meta.env.BASE_URL + window.location.pathname + window.location.search);
+    </script>
 </head>
+<body>
+    Redirecting...
+</body>
+</html>
